# airflow-boilerplate

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
ansible/: hosts.ini  install_reqs_docker.yml
scripts/: docker-compose-up.sh  sync-pip-from-reqs.sh
src/: .env  Dockerfile  docker-compose.yaml  requirements-base.txt  requirements.txt
src/custom-package/: pyproject.toml
src/custom-package/src/: test_utils.py
src/dags/: dbt_sample_dag.py  hello_world.py
src/dags/dbt/airflow/: README.md  dbt_project.yml
src/dags/dbt/airflow/macros/: generate_schema_name.sql
src/dags/dbt/airflow/models/alias/: dags.sql  schema.yml  task_fail.sql  task_fail_with_dag.sql
src/dags/dbt/airflow/tests/: test_dag_id.sql
src/lib/: install_lib.sh  requirements-lib.txt
src/lib/lib-a/: pyproject.toml
src/lib/lib-a/src/lib_a/: __init__.py  core.py
src/lib/lib-b/: pyproject.toml
src/lib/lib-b/src/lib_b/: __init__.py
tests/: test_dag_loader.py  test_dags.py  test_hello_world_dag.py
