[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-package"
version = "0.1.0"
description = "custom-package"
license = { text = "MIT License" }
requires-python = ">=3.8"

dependencies = [
    "apache-airflow==2.9.1",
    "requests",
]

[tool.setuptools]
package-dir = { "" = "src" }

packages = { find = { where = ["src"] } }